@@ -51,10 +51,12 @@
   day of the week. Note, when two types are provided the
   first forms the columns and the second the rows.}
 
-  \item{avg.time}{Either "month" (the default), or "year".
-  Determines whether monthly mean or annual mean trends are
-  plotted. Note that for "year", six or more years are
-  required.}
+  \item{avg.time}{Can be "month" (the default), "season" or
+  "year". Determines the time over which data should be
+  averaged. Note that for "year", six or more years are
+  required. For "season" the data are plit up into spring:
+  March, April, May etc. Note that December is considered
+  as belonging to winter of the following year.}
 
   \item{statistic}{Statistic used for calculating monthly
   values. Default is \code{"mean"}, but can also be
