@@ -5,6 +5,9 @@ Changes in openair 0.5-12 [2011-10-10]
 *       new option 'intervals' for percentileRose
 *       add min.bin option to polarAnnulus
 *       add Index of Agreement to modStats
+*       new averaging time "season" for timeAverage
+*	better treatment of avg.time = "season" and type = "season" in
+	TheilSen and smoothTrend
 
 Changes in openair 0.5-11 [2011-09-14]
 =====================================
